issues#99,#100,#101,#238,#242,info section (#267)
* my changes

* my changes

* my changes

* my new changes

* Update 04_containers.Rmd

* Update 20_beta_diversity.Rmd

* Update 23_multi-assay_analyses.Rmd

* Update 24_clustering.Rmd

* Update 19_visualization_techniques.Rmd

* Update 24_biclustering.Rmd

* Update 24_clustering.Rmd

* Update 24_biclustering.Rmd

* Update 22_communitytyping.Rmd

* Update 24_biclustering.Rmd

* Update build-book-release.yml

* Update build-book-release.yml

* Update _bookdown.yml

* Update _bookdown.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update _bookdown.yml

tab issues fixed

* Update .gitignore

Added *.Rproj to  ~/.gitignore

* Update build-book-release.yml

 changed remotes::install_github("SchlossLab/mikRopML") to remotes::install_github("SchlossLab/mikropml")

* Update DESCRIPTION

move some into DESCRIPTION file

* Update build-book-release.yml

move some  into DESCRIPTION file

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Delete OMA.Rproj

deletion of OMA.Rproj

* Update build-book-release.yml

removed some tasks for test

* Update DESCRIPTION

Addition of some remote commands

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update .gitignore

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -225,7 +225,7 @@ For information have a look at the [intro vignette](https://bioconductor.org/pac
    altExp             free              match    Alternative experiments  
 MultiAssay            free      free (mapping)    Multi-omic experiments    
 
-Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is required but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
+Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
 
 
 
@@ -376,15 +376,9 @@ Load required packages.
 library(mia)
 library(ggplot2)
 
-if( !require("BiocManager") ){
-    install.packages("BiocManager")
-    library("BiocManager")
-}
+library("BiocManager")
+library("Biostrings")
 
-if( !require("Biostrings") ){
-    BiocManager::install("Biostrings")
-    library("Biostrings")
-}
 library(Biostrings)
 ```
 
@@ -815,9 +809,4 @@ Conversion is possible between other data formats. Interested readers can refer 
 * [readQZA](https://microbiome.github.io/mia/reference/loadFromQIIME2.html)
 
 
-## Session Info {-}
 
-```{r sessionInfo, echo=FALSE, results='asis'}
-prettySessionInfo()
-
-```
