--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -256,19 +256,10 @@ It aims to maximize the variance in respect of covariates. The results shows how
 each covariate affects.
 
 ```{r microbiome_RDA1}
-# Load required packages
-if(!require("vegan")){
-    install.packages("vegan")
-    library("vegan")
-}
-if(!require("stringr")){
-    install.packages("stringr")
-    library("stringr")
-}
-if(!require("knitr")){
-    install.packages("knitr")
-    library("knitr")
-}
+# Load libraryd packages
+library("vegan")
+library("stringr")
+library("knitr")
 # Load data
 data(enterotype, package="mia")
 # Covariates that are being analyzed
@@ -342,18 +333,9 @@ kable(rda_info)
 
 ```{r microbiome_RDA2}
 # Load ggord for plotting
-if(!require("ggord")){
-    if(!require("devtools")){
-        install.packages("devtools")
-        library("devtools")
-    }
-    install_github("https://github.com/fawda123/ggord/")
-    library("ggord")
-}
-if(!require("ggplot2")){
-    install.packages("ggplot2")
-    library("ggplot2")
-}
+library("ggord")
+library("ggplot2")
+
 # Since na.exclude was used, if there were rows missing information, they were 
 # dropped off. Subset coldata so that it matches with rda.
 coldata <- coldata[ rownames(rda$CCA$wa), ]
@@ -530,10 +512,7 @@ redundancy analysis. Advantage of the latter approach is that by doing so we can
 coefficients: how much each taxa affect to the result.
 
 ```{r}
-if( !require(vegan) ){
-    BiocManager::install("vegan")
-    library("vegan")
-}
+library(vegan)
 # Agglomerate data to Species level
 tse <- agglomerateByRank(tse, rank = "Species")
 
@@ -626,8 +605,4 @@ appropriate choice for comparing community compositions.
 
  - Chapter \@ref(clustering) on community typing
 
-## Session Info {-}
 
-```{r sessionInfo, echo=FALSE, results='asis'}
-prettySessionInfo()
-```
