--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -52,10 +52,7 @@ _cobiclust_ takes counts table as an input and gives _cobiclust_ object as an ou
 It includes clusters for taxa and samples. 
 
 ```{r cobiclust_2}
-if(!require(cobiclust)){
-    install.packages("cobiclust")
-    library(cobiclust)
-}
+library(cobiclust)
 
 # Do clustering; use counts table´
 clusters <- cobiclust(assay(mae[[1]], "counts"))
@@ -78,10 +75,9 @@ clusters$classification
 Next we can plot clusters. Commonly used plot is heatmap with annotations. 
 
 ```{r cobiclust_3, fig.width=14, fig.height=12}
-if(!require(pheatmap)){
-    install.packages("pheatmap")
-    library(pheatmap)
-}
+
+library(pheatmap)
+
 # z-transform for heatmap
 mae[[1]] <- transformCounts(mae[[1]], assay.type = "rclr",
                             MARGIN = "features",
@@ -106,16 +102,9 @@ pheatmap(assay(mae[[1]], "clr_z"), cluster_rows = F, cluster_cols = F,
 Boxplot is commonly used to summarize the results:
 
 ```{r cobiclust_4}
-if(!require(ggplot2)){
-    install.packages("ggplot2")
-    library(ggplot2)
-}
-if(!require(patchwork)){
-    install.packages("patchwork")
-    library(patchwork)
-}
-
-# ggplot requires data in melted format
+library(ggplot2)
+library(patchwork)
+# ggplot librarys data in melted format
 melt_assay <- meltAssay(mae[[1]], assay.type = "rclr", add_col_data = T, add_row_data = T)
 
 # patchwork two plots side-by-side
@@ -372,8 +361,3 @@ pheatmap(corr, cluster_cols = F, cluster_rows = F,
          annotation_row = bicluster_rows)
 ```
 
-## Session Info {-}
-
-```{r sessionInfo, echo=FALSE, results='asis'}
-prettySessionInfo()
-```
