--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -16,12 +16,8 @@ compared here.
 
 ```{r permanova_import, warning = FALSE, message = FALSE}
 # import necessary packages
-if (!require(gtools)){
-  install.packages("gtools")  
-}
-if (!require(purrr)){
-  install.packages("purrr")  
-}
+library(gtools)
+library(purrr)
 library(vegan)
 library(gtools)
 library(purrr)
@@ -129,10 +125,7 @@ through `microbiomeDataSets` package.
 
 
 ```{r, message=FALSE, warning=FALSE}
-if (!require(fido)){
-  # installing the fido package
-  devtools::install_github("jsilve24/fido")
-}
+library(fido)
 ```
 
 Loading the libraries and importing data:
@@ -239,13 +232,9 @@ plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
 ## Interactive 3D Plots
 
 ```{r, message=FALSE, warning=FALSE}
-# Installing required packages
-if (!require(rgl)){
-  BiocManager::install("rgl")  
-}
-if (!require(plotly)){
-  BiocManager::install("plotly")  
-}
+# Installing libraryd packages
+library(rgl)
+library(plotly)
 ```
 
 ```{r setup2, warning=FALSE, message=FALSE}
@@ -259,9 +248,7 @@ In this section we make a 3D version of the earlier  Visualizing the most domina
 
 ```{r, message=FALSE, warning=FALSE}
 # Installing the package
-if (!require(curatedMetagenomicData)){
-  BiocManager::install("curatedMetagenomicData")  
-}
+library(curatedMetagenomicData)
 # Importing necessary libraries
 library(curatedMetagenomicData)
 library(dplyr)
