--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -118,9 +118,7 @@ plotting them as points with `geom_jitter`.
 It adds p-values to plot.
 
 ```{r visualize-shannon}
-if( !require(ggsignif) ){
-  install.packages("ggsignif")
-}
+library(ggsignif)
 library(ggplot2)
 library(patchwork)
 library(ggsignif)
@@ -248,10 +246,4 @@ plots <- lapply(plots, "+",
 ((plots[[1]] | plots[[2]] | plots[[3]]) / 
 (plots[[4]] | plots[[5]] | plots[[6]])) +
   plot_layout(guides = "collect")
-```
-
-## Session Info {-}
-
-```{r sessionInfo, echo=FALSE, results='asis'}
-prettySessionInfo()
 ```
