--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -100,7 +100,7 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
 _pheatmap_ is a package that provides methods to plot clustered heatmaps. 
 
 ```{r pheatmap1}
-if(!require(pheatmap)){install.packages("pheatmap"); library(pheatmap)}
+library(pheatmap)
 
 # Takes subset: only samples from feces, skin, or tongue
 tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
@@ -128,10 +128,7 @@ pheatmap(mat)
 We can create clusters by hierarchical clustering and add them to the plot.
 
 ```{r pheatmap2}
-if(!require(ape)){
-    install.packages("ape")
-    library(ape)
-}
+library(ape)
 
 # Hierarchical clustering
 taxa_hclust <- hclust(dist(mat), method = "complete")
@@ -141,10 +138,7 @@ taxa_tree <- as.phylo(taxa_hclust)
 ```
 
 ```{r pheatmap3}
-if(!require(ggtree)){
-    install.packages("ggtree")
-    library(ggtree)
-}
+library(ggtree)
 
 # Plot taxa tree
 taxa_tree <- ggtree(taxa_tree) + 
@@ -241,9 +235,4 @@ package provides wrapper for _ComplexHeatmap_ and its usage is
 explained in chapter \@ref(viz-chapter) along with the `pheatmap`
 package for clustered heatmaps.
 
-## Session Info {-}
-
-```{r sessionInfo, echo=FALSE, results='asis'}
-prettySessionInfo()
-```
 
