Expand example on MAE structure

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -291,12 +291,41 @@ See the OMA book for examples.
 
 ### MultiAssayExperiment (MAE) data container
 
-1. Create TreeSE data containers from individual CSV files.
-2. Combine TreeSE into MAE.
-3. Check that each individual experiment of MAE equals corresponding TreeSE.
-4. Take a subset of MAE (e.g., 10 first samples), and observe the subsetted MAE.
+The following exercise walks you through disassembling a MAE object in
+order to store it as multiple separate csv files.
 
-Useful functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, MultiAssayExperiment, ExperimentList, SimpleList
+1. Import the microbiomeDataSets package
+2. Store the HintikkaXOData MAE into a variable named `mae`
+3. Which and how many experiments are contained by the MAE?
+4. Split the MAE into TreeSEs named `microbiota`, `metabolites` and `biomarkers`
+5. Which and how many assays are contained by each TreeSE?
+6. Store the assays of each TreeSE into a variable named `<TreeSE name>_assays`
+7. Write a csv file for each assays object with the `write.csv` function
+8. Besides experiments, MAEs also include a sampleData and a sampleMap, which
+   are accessible with `colData(mae)` and `sampleMap(mae)`, respectively.
+   Save also each of these two elements into a csv file.
+
+Well done! You just splitted a MAE into its components and stored them as csv files.
+[This script](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl/blob/main/src/assets/XO_preprocess.R)
+shows a possible approach. Next, we will try to reconstruct the same MAE
+from the files you created. Make sure you know their names and location!
+
+1. Read in the csv files containing assays with `read.csv` and save each
+   of them into a variable named `<assay name>_assays`
+2. Create one TreeSE from each assays object with the `TreeSummarizedExperiment`
+   function. Note that the function also requires the arguments for rowData
+   and colData, to which you can give the rownames and colnames of the
+   assays object, respectively
+3. Read in the sampleData and the sampleMap and store them into the
+   variables `sample_data` and `sample_map`, respectively
+4. Combine the TreeSEs, the sampleData and the sampleMap into a MAE named `mae`
+   with the `MultiAssayExperiment` function, where the first argument is an
+   `ExperimentList` of your TreeSEs, the second is colData and the third is
+   sampleMap
+5. Make sure that the MAE experiments are identical to the original TreeSEs.
+
+Good job! Now you are aware of how MAEs are built and we can proceed to some
+explorative exercises.
 
 
 ### Multi-omic data exploration
