Expand mae exploration exercise

--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -87,7 +87,7 @@ mae[[2]]
 mae[[3]]
 ```
 
-## Cross-correlation Analysis
+## Cross-correlation Analysis {#cross-correlation}
 
 Next we can perform a cross-correlation analysis. Let us analyze if
 individual bacteria genera are correlated with concentrations of
@@ -142,7 +142,7 @@ plot <- Heatmap(correlations$cor,
 plot
 ```
 
-## Multi-Omics Factor Analysis
+## Multi-Omics Factor Analysis {#mofa}
 
 Multi-Omics Factor Analysis (MOFA) is an unsupervised method for integrating multi-omic data sets in a downstream analysis [@Argelaguet2018]. It could be
 seen as a generalization of principal component analysis. Yet, with the ability
