Add MAE info in chapter 16.1.1 #276

--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -3,7 +3,7 @@
 
 ## Data containers
 
-### Resources for TreeSummarizedExperiment
+### Data container documentation
 
  * SingleCellExperiment [@R-SingleCellExperiment]
    + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html)
@@ -15,7 +15,9 @@
    + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/TreeSummarizedExperiment/inst/doc/Introduction_to_treeSummarizedExperiment.html)
    + [Project page](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
    + Publication: [@Huang2021]
-   
+* MultiAssayExperiment [@R-MultiAssayExperiment]
+   + [Online tutorial](https://www.bioconductor.org/packages/release/bioc/vignettes/MultiAssayExperiment/inst/doc/MultiAssayExperiment.html)
+   + [Project page](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html)   
 
 ### Other relevant containers
 
