--- a/book.bib
+++ b/book.bib
@@ -214,7 +214,7 @@
 }
 
 @Article{Ramos2017,
-  title =	 {Software For The Integration Of Multi-Omics
+  title =	 { Software For The Integration Of Multi-Omics
                   Experiments In Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
                   Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
@@ -225,7 +225,7 @@
                   Singh Mer and Markus Reister and Martin Morgan and
                   Vincent Carey and Levi Waldron},
   journal =	 {Cancer Research},
-  year = 2017
+  year = {2017},
 }
 
 @Book{Amezquita2020,
@@ -546,6 +546,21 @@ year = {2022}
   author =	 {Ruizhu Huang},
   year =	 {2020},
   note =	 {R package version 1.6.2},
+}
+
+@Manual{R-MultiAssayExperiment,
+  title =	 {MultiAssayExperiment: Software For The Integration Of Multi-Omics
+                  Experiments In Bioconductor},
+  author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
+                  Rimsha Azhar and Azfar Basunia and Carmen Rodriguez
+                  Cabrera and Tiffany Chan and Philip Chapman and Sean
+                  Davis and David Gomez-Cabrero and Aedin C. Culhane
+                  and Benjamin Haibe-Kains and Kasper Hansen and
+                  Hanish Kodali and Marie Stephie Louis and Arvind
+                  Singh Mer and Markus Reister and Martin Morgan and
+                  Vincent Carey and Levi Waldron},
+  year =	 2017,
+  note =	 {R package version 1.26.0},
 }
 
 @Manual{R-XVector,
