--- a/book.bib
+++ b/book.bib
@@ -162,7 +162,7 @@
   journal =	 {F1000Research},
   volume =	 9,
   pages =	 1246,
-  doi =		 {https://doi.org/10.12688/f1000research.26669.2},
+  doi =		 {10.12688/f1000research.26669.2},
   year =	 {2021},
   annote =	 {TreeSE reference},
   keywords =	 {bioscience}
