Prepare earlier exercise on TreeSE contruction

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -37,19 +37,24 @@ For tips on Quarto, see [Quarto tutorial](https://quarto.org/docs/authoring/mark
 ## Data containers: TreeSE
 
 
-### Constructing a data object
+### Constructing a data object {#construct-TreeSE}
 
-Import data from CSV files to TreeSE (see shared data folder for example data sets).
+Here we cover how to construct a TreeSE from CSV files, using the components
+of OKeefeDSData from the microbiomeDataSets package as an example dataset.
 
-1. Import the data files in R
-2. Construct a TreeSE data object (see [Ch. 2](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data))
-3. Check that importing is done correctly. E.g., choose random samples and features,
+1. Download the files with the prefix _DS_ from
+   [this directory](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl/tree/main/src/assets)
+2. Read in the csv files with `read.csv` and store them into the variables
+   `assays`, `rowdata` and `coldata`, respectively
+3. Create a TreeSE from the individual components with `TreeSummarizedExperiment`.
+   Note that the function requires three arguments: assays, rowData and colData,
+   to which you can give the appropriate item
+4. Check that importing is done correctly. E.g., choose random samples and features,
 and check that their values equal between raw files and TreeSE.
 
-Useful functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
+Usefuls functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
 
 ### Importing data
-
 
 You can also check the [function reference in the mia package](https://microbiome.github.io/mia/reference/index.html)
 
@@ -289,7 +294,7 @@ See the OMA book for examples.
 
 ## Multiomics
 
-#### Basic exploration
+### Basic exploration
 
 Here we learn how to conduct preliminary exploration on a MAE, using
 HintikkaXOData as an example dataset.
@@ -310,7 +315,7 @@ HintikkaXOData as an example dataset.
 So far so good. You explored a MAE and its experiments, getting a taste of how
 information is organized in its internal structure.
 
-#### Experiment agglomeration
+### Experiment agglomeration
 
 Here we learn how to manipulate an experiment contained by a MAE and save the
 new modified version of the experiment in a suitable place (the altExp slot).
@@ -330,7 +335,7 @@ new modified version of the experiment in a suitable place (the altExp slot).
 Good job! You agglomerated one of the experiments in the MAE and stored it as
 an alternative experiment.
 
-#### Experiment transformation
+### Experiment transformation
 
 We proceed with an exercise on a different type of data manipulation, that is,
 transformation of assays of individual experiments in the MAE.
@@ -349,7 +354,7 @@ You made it! You learnt how to apply different transformations to the assays
 of individual experiments in a MAE with `transformCounts`, specifying optional
 arguments based on the used method.
 
-#### Assay extraction
+### Assay extraction
 
 The following exercise walks you through disassembling a MAE object in
 order to retrieve a specific assay, or to store its components as
@@ -374,18 +379,17 @@ Well done! You just splitted a MAE into its components and stored them as csv fi
 [This script](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl/blob/main/src/assets/XO_preprocess.R)
 shows a possible approach.
 
-#### MAE reconstruction
+### MAE reconstruction
 
 Next, we will try to reconstruct the same MAE from the files you created.
 Make sure you know their names and location! Alternatively, you can download
-[this directory]() with the readily disassembled components of HintikkaXOData.
+[this directory](https://github.com/microbiome/course_2023_oulu/tree/main/data)
+with the readily disassembled components of HintikkaXOData.
 
 1. Read in the csv files containing assays with `read.csv` and save each
    of them into a variable named `<assay name>_assays`
 2. Create one TreeSE from each assays object with the `TreeSummarizedExperiment`
-   function. Note that the function also requires the arguments for rowData
-   and colData, to which you can give the rownames and colnames of the
-   assays object, respectively
+   function, as explained in the exercise \@ref(construct-TreeSE)
 3. Read in the sampleData and the sampleMap and store them into the
    variables `sample_data` and `sample_map`, respectively
 4. Combine the components with `MultiAssayExperiment`, where the first argument
@@ -401,7 +405,7 @@ Make sure you know their names and location! Alternatively, you can download
 Good job! Now you are aware of how MAEs are built and we can proceed to some
 analytical exercises.
 
-#### Cross-correlation analysis
+### Cross-correlation analysis
 
 Now we will perform a cross-correlation analysis between two of the
 experiments in the MAE.
@@ -429,7 +433,7 @@ Great job! You performed a cross-correlation analysis between two experiments
 of a MAE and visualized the results with a heatmap. You are also able to
 customise the correlation method and significance testing used for the analysis.
 
-#### Multi-omic Factor Analysis (MOFA)
+### Multi-omic Factor Analysis (MOFA)
 
 We further move onto an exercise on MOFA.
 
