MOFA exercise to do

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -435,11 +435,14 @@ customise the correlation method and significance testing used for the analysis.
 
 ### Multi-omic Factor Analysis (MOFA)
 
-We further move onto an exercise on MOFA.
+TO DO
 
-* Move further onto multi-omics factor analysis (\@ref(mofa)).
+We further move onto an exercise on MOFA, which is explained in chapter \@ref(mofa).
 
-Congratulations! You conducted a MOFA bla bla bla.
+1. Import the mia package, load HintikkaXOData with `data` and store it into a
+   variable named `mae`
+
+Congratulations! You conducted a MOFA.
 
 
 
